css/index.css
body {
    background-color: #141414;
}

.mentions-container {
    margin-left: 2.5em;
}

.mentions-container h2 {
    margin-top: 1.5em;
    color: white;
    text-decoration: underline;
    text-decoration-color: orange;
}

.mentions {
    display: flex;
    flex-wrap: wrap;
    gap: 1em;
    font-weight: 700;
    font-size: 1.28571429em;
}

.mentions > * {
    color: rgba(255, 255, 255, .75);
}

.mentions > *:not(:last-child)::after {
    content: ",";
}

.mentions > a {
    text-decoration: underline;
}

.mentions > [data-title]::after {
    content: attr(data-title);
    margin-left: 5px;
    font-size: 70%;
    color: rgba(255, 255, 255, .5);
}

.mentions > .translator {
    display: flex;
    align-items: center;
}

.mentions > .translator > span {
    margin-left: 0.5em;
}

.dvselection {
    color: white;
    width: 100%;
    height: 10em;
    position: relative;
}

.dvselection > * {
    position: absolute;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    padding: 2rem;
    display: flex;
    align-items: center;
    text-align: center;
    justify-content: center;
}

.dvselection:hover {
    cursor: pointer;
}

.dvselection:hover .dvheader {
    opacity: 0;
}

.dvselection:hover .dvdescription {
    opacity: 1;
}

.dvheader {
    text-transform: uppercase;
    font-weight: bold;
    font-size: 2.5em;
    line-height: 2.5rem;
    opacity: 1;
}

.dvdescription {
    font-size: 1em;
    opacity: 0;
}

.dvheader, .dvdescription {
    transition: opacity 0.1s linear;
}

.wip {
    opacity: 0.5;
    position: relative;
}

.wip::before {
    content: 'Work In Progress';
    position: absolute;
    left: calc(50% - 4em);
    top: 1em;
    color: orange;
    font-weight: bold;
}

.footer {
    color: white;
    opacity: 60%;
    font-size: 12.6px;
    pointer-events: none;
    display: flex;
    width: 100%;
    position: fixed;
    left: 0;
    bottom: 0;
    right: 0;
    justify-content: space-between;
    align-items: flex-end;
}

.footer-item {
    width: 33.3%;
    margin: 1em;
}

.footer-item:nth-child(1) {

}

.footer-item:nth-child(2) {
    text-align: right;
}

.dvholder {
    position: relative;
}

.dvchild {
    position: absolute;
    left: 0;
    top: -1.5em;

    color: orange;
    font-size: 50%;
}

#sf-menu {
    padding-bottom: 3em;
}

